--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "index",
-  "version": "0.0.1",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "habr",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "events": "^3.0.0",
-    "fs": "0.0.1-security",
-    "http": "0.0.0",
-    "supervisor": "^0.12.0",
-    "url": "^0.11.0",
-    "util": "^0.11.0",
-    "winston": "^3.1.0"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "2.1.5"
   },
-  "devDependencies": {},
-  "description": ""
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
